k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heb-inventory
  labels:
    app.kubernetes.io/name: heb-inventory
