k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heb-inventory
  namespace: heb-inventory
  labels:
    app.kubernetes.io/name: heb-inventory
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: heb-inventory
  ports:
    - name: http
      port: 80
      targetPort: http
